# tuni-cli

./: .gitignore  LICENSE  README.md
mi-race/: config.json  pyproject.toml
mi-race/mi_race/analysis/: __init__.py  metrics.py
mi-race/mi_race/cli/: main.py
mi-race/mi_race/data/: extract_data.py  preview.py
mi-race/mi_race/reporting/: compare_models.py  report.py
mi-race/mi_race/train/: data_prep.py  orchestrator.py  runner.py
mi-race/mi_race/train/models/: cnn.py  mlp.py  random_forest.py  rnn.py
mi-race/outputs/: confusion_matrix_global.csv
mi-race/processed_data/: example_df.csv  iris.py  iris_ds.csv
